--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "winike cuamba",
   "license": "MIT",
   "dependencies": {
-    "node-telegram-bot-api": "^0.61.0"
+    "blaze-api": "^1.0.3",
+    "dotenv": "^16.0.3",
+    "node-telegram-bot-api": "^0.61.0",
+    "puppeteer": "^19.8.5"
   }
-  
 }
